kubernetes/apps/services/bentopdf/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bentopdf
  namespace: services
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: ph:file-pdf-bold
    hajimari.io/group: services
    hajimari.io/appName: BentoPDF
spec:
  hostnames:
    - "pdf.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: bentopdf
          port: 8080
